--- a/index.html
+++ b/index.html
@@ -5,49 +5,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section class="profile-container">
+  <section class="top-banner">
     <div class="container">
       <h1>Welcome To</h1>
       <h1><span>Tanin Rahman</span> World</h1>
       <h3>I really do belive that the best is yet to come</h3>
-      <p>I am a student.I study in Diploma in Engineering at Kurigram Polytechnic Institute.I am in last semester of my course.My department name is Civil Technology.But I want to be a Web Developer which is my main goal and dream also.I just wanna fullfill my dream at any cost.I don't know what have in my life but i want to switch that career path.And I think I can do this if i've passion.And I really do belive that the best is yet to come.</p>
-      <a closs="link-btn" href="https://web.programming-hero.com/">HIRE ME</a>
+      <p>I am a student.I study in Diploma in Engineering at Kurigram Polytechnic Institute.I am in last semester of my course.My department name is Civil Technology.But I want to be a Web Developer which is my main goal and dream also.I just wanna fullfill my dream at any cost. I really do belive that the best is yet to come.</p>
+
+      <a class="link-btn" href="https://web.programming-hero.com/">HIRE ME</a>
     </div>
+
     <div class="container">
       <img src="images/tanin.png" alt="image">
     </div>
+
   </section>
 
-  <section class="profile.container">
+  <section class="profile-container">
     <div class="container">
       <img src="images/tanin2.png" alt="imageoftanin">
     </div>
     <div class="container">
       <h1>Dream Big</h1>
-      <h2>Become a web developer</h2>
+      <h3>Become a web developer</h3>
         <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-btn" href="#">DOWNLOAD RUSUME</a>
     </div>
   </section>
 
   <section>
-    <h1>Experiences</h1>
+    <h1 id="experience-head">Experiences</h1>
     <div class="experience-container">
-      <div class="container">
+      <div class="experience-box left-box">
         <h1>Full Stack Web Developer</h1>
-        <p>2024-Present | Pro Level Developer</p>
+        <p class="time">2024-Present | Pro Level Developer</p>
         <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
       </div>
-      <div class="container">
+      <div class="experience-box right-box">
         <h1>Baby Web Developer</h1>
-        <p>2021-2022 | Programming Hero Learner</p>
+        <p class="time">2021-2022 | Programming Hero Learner</p>
         <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
       </div>
     </div>
-     
-
   </section>
+
+  <footer>
+    <p>© Tanin Rahman 2022, a Programming Hero initiative.</p>
+  </footer>
 </body>
 </html>
