background image added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="experience-section">
     <h1 id="experience-head">Experiences</h1>
     <div class="experience-container">
       <div class="experience-box left-box">
